<resources>
    <string name="app_name">Contacts Reader</string>

    <string name="add">Add new contact</string>
    <string name="import_phone_book">Import contacts</string>
    <string name="delete">Delete contact</string>
    <string name="edit">Edit contact</string>
    <string name="confirm_changes">Confirm changes</string>

    <string name="new_contact">new contact</string>

    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="done">Done!</string>

    <string name="search">Enter to search</string>


    <string name="first_name">First name</string>
    <string name="first_name_required">First name (Required)</string>

    <string name="last_name">Last name</string>
    <string name="phone">Phone number</string>
    <string name="phone_required">Phone number (Required)</string>
    <string name="address">Address</string>

    <string name="job">Job</string>
    <string name="job_required">Job (Required)</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="married">married</string>
    <string name="single">single</string>
    <string name="email">Email</string>
    <string name="marital_status">Marital status</string>
    <string name="gender">Gender</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="snack_add_message">Contact added successfully</string>
    <string name="multiple_delete">Multiple delete</string>

    <string name="select_all">Select All</string>
    <string name="clear_selection">Clear</string>

    <string name="multiple_choice_cancel">Cancel</string>
    <string name="multiple_choice_delete">Delete (%s)</string>
    <string name="import_contacts">Import (%s)</string>
    <string name="importing">Importing contacts</string>
    <string name="deleting">Deleting contacts</string>

    <string name="choice_mode">Choice Mode</string>

</resources>
