<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/tools"
      xmlns:contactsdb="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemClearSelection"
        android:title="@string/clear_selection"
        contactsdb:showAsAction="always">
    </item>


    <item
        android:id="@+id/itemSelectAll"
        android:icon="@drawable/ic_select_all_black_24dp"
        android:title="@string/select_all"
        contactsdb:showAsAction="always">
    </item>

    <item
        android:id="@+id/itemImport"
        android:icon="@drawable/ic_import"
        android:title="@string/import_phone_book"
        contactsdb:showAsAction="always">
    </item>

    <item
        android:id="@+id/itemMultipleChoiceDelete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/multiple_delete"
        contactsdb:showAsAction="always">
    </item>

    <item
        android:id="@+id/itemAdd"
        android:icon="@drawable/ic_person_add"
        android:title="@string/add"
        contactsdb:showAsAction="always">
    </item>


</menu>