<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingBottom="15dp">

    <TextView
        android:id="@+id/tvNewContact"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/new_contact"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/job"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/etJob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/marital_status"
            android:textSize="15dp"/>

        <CheckedTextView
            android:layout_width="90dp"
            android:paddingRight="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/married"
            android:layout_marginLeft="10dp"
            android:id="@+id/chkMarried"/>

        <CheckedTextView
            android:layout_width="90dp"
            android:paddingRight="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/single"
            android:layout_marginLeft="10dp"
            android:id="@+id/chkSingle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/gender"
            android:textSize="15dp"/>

        <CheckedTextView
            android:layout_width="90dp"
            android:paddingRight="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="10dp"
            android:id="@+id/chkFemale"/>

        <CheckedTextView
            android:layout_width="90dp"
            android:paddingRight="10dp"
            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="10dp"
            android:id="@+id/chkMale"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/email"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:clickable="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_black_24dp"/>
    </LinearLayout>
</LinearLayout>