<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="10dp">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="66dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_required"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextPhone"
                    android:hint="@string/phone_required"
                    android:imeOptions="actionNext"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressTextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextAddress"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress|textCapWords"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jobTextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextJob"
                    android:hint="@string/job_required"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/marital_status"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:id="@+id/editRadioMaritalStatus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/editChkMarried"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="@string/married"
                        />

                    <RadioButton
                        android:id="@+id/editChkSingle"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="@string/single"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="3dp"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/gender"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:id="@+id/editRadioGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/editChkFemale"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:text="@string/female"/>

                    <RadioButton
                        android:id="@+id/editChkMale"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:text="@string/male"/>
                </RadioGroup>

            </LinearLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailTextInputLayout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextEmail"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
