<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/job"
                android:textSize="15dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp">

                <EditText
                    android:id="@+id/etJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/marital_status"
                android:textSize="15dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/chkMarried"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/married"
                    />

                <RadioButton
                    android:id="@+id/chkSingle"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/single"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/gender"
                android:textSize="15dp"/>

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/chkFemale"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/female"/>

                <RadioButton
                    android:id="@+id/chkMale"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:text="@string/male"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>