<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DetailActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="10dp">

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_margin="10dp"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/firstNameLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/first_name"/>

            <TextView
                android:id="@+id/firstNameTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"/>

            <TextView
                android:id="@+id/lastNameLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/last_name"/>

            <TextView
                android:id="@+id/lastNameTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"/>

            <TextView
                android:id="@+id/phoneLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/phoneTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"/>

            <TextView
                android:id="@+id/addressLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/addressTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"/>

            <TextView
                android:id="@+id/jobLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/job"/>

            <TextView
                android:id="@+id/jobTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="4"/>

            <TextView
                android:id="@+id/maritalStatusLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/marital_status"/>

            <TextView
                android:id="@+id/maritalStatusTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="5"/>

            <TextView
                android:id="@+id/genderLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="6"
                android:text="@string/gender"/>

            <TextView
                android:id="@+id/genderTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="6"/>

            <TextView
                android:id="@+id/emailLabelTextView"
                style="@style/ContactLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="7"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/emailTextView"
                style="@style/ContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="7"/>


        </GridLayout>



    </ScrollView>

</RelativeLayout>
